Design The View Of MemberShipType and Customer and related it by [Eager Loading].

--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -188,6 +189,10 @@
     <Compile Include="Migrations\202106050033471_PopulateMemberShipTypes.cs" />
     <Compile Include="Migrations\202106050033471_PopulateMemberShipTypes.Designer.cs">
       <DependentUpon>202106050033471_PopulateMemberShipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106050102337_AddDataToMemberShipTypes.cs" />
+    <Compile Include="Migrations\202106050102337_AddDataToMemberShipTypes.Designer.cs">
+      <DependentUpon>202106050102337_AddDataToMemberShipTypes.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -257,6 +262,8 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Customer\Index.cshtml" />
+    <Content Include="Views\Customer\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -286,6 +293,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202106050033471_PopulateMemberShipTypes.resx">
       <DependentUpon>202106050033471_PopulateMemberShipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106050102337_AddDataToMemberShipTypes.resx">
+      <DependentUpon>202106050102337_AddDataToMemberShipTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
