Implement The Validation .
Using The Client Side Validation
[jquery Val]
and Server Side Validation
[DataAnnotations]
and finally using[ValidateAntiForgeryToken]

--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MemberShipType.cs" />
+    <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\ViewModels\NewCustomerViewModel.cs" />
     <Compile Include="Models\ViewModels\NewMovieViewModel.cs" />
