--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -17,7 +17,7 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
-    <Use64BitIISExpress />
+    <Use64BitIISExpress>false</Use64BitIISExpress>
     <IISExpressSSLPort>44302</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -237,6 +237,22 @@
     <Compile Include="Migrations\202106062100169_AddDataAnnotationToMovieClass.Designer.cs">
       <DependentUpon>202106062100169_AddDataAnnotationToMovieClass.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202106192034497_SeedUsers.cs" />
+    <Compile Include="Migrations\202106192034497_SeedUsers.Designer.cs">
+      <DependentUpon>202106192034497_SeedUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106192155498_SeedUsers1.cs" />
+    <Compile Include="Migrations\202106192155498_SeedUsers1.Designer.cs">
+      <DependentUpon>202106192155498_SeedUsers1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106192309242_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\202106192309242_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>202106192309242_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106200032003_AddPhoneToApplicationUser.cs" />
+    <Compile Include="Migrations\202106200032003_AddPhoneToApplicationUser.Designer.cs">
+      <DependentUpon>202106200032003_AddPhoneToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customeer.cs" />
@@ -246,9 +262,15 @@
     <Compile Include="Models\MemberShipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Models\ViewModels\NewCustomerViewModel.cs" />
     <Compile Include="Models\ViewModels\NewMovieViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -374,6 +396,10 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\DataTables\css\mixins.scss" />
     <Content Include="Content\DataTables\css\common.scss" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
@@ -486,10 +512,11 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Customer\Details.cshtml" />
-    <Content Include="Views\Movie\Index.cshtml" />
+    <Content Include="Views\Movie\List.cshtml" />
     <Content Include="Views\Movie\Details.cshtml" />
     <Content Include="Views\Customer\CustomerForm.cshtml" />
     <Content Include="Views\Movie\New.cshtml" />
+    <Content Include="Views\Movie\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -538,6 +565,18 @@
     <EmbeddedResource Include="Migrations\202106062100169_AddDataAnnotationToMovieClass.resx">
       <DependentUpon>202106062100169_AddDataAnnotationToMovieClass.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106192034497_SeedUsers.resx">
+      <DependentUpon>202106192034497_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106192155498_SeedUsers1.resx">
+      <DependentUpon>202106192155498_SeedUsers1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106192309242_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>202106192309242_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106200032003_AddPhoneToApplicationUser.resx">
+      <DependentUpon>202106200032003_AddPhoneToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -545,6 +584,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
